# passcrambler

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
python/: passcrambler.py
src/: cmd.rs  main.rs
