[package]
name = "passcrambler"
version = "0.1.0"
authors = ["Denis Evsyukov <denis@evsyukov.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
pico-args = "0.4.1"
aes = "0.7.1"
rpassword = "5.0.1"
sha256 = "1.0.2"