[package]
name = "passcrambler"
version = "0.1.0"
authors = ["Denis Evsyukov <denis@evsyukov.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
pico-args = "0.4.1"
rpassword = "5.0.1"
rust-crypto = "0.2.36"
base64 = "0.13.0"