[package]
name = "passcrambler"
version = "0.1.0"
authors = ["Denis Evsyukov <denis@evsyukov.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = 'abort'

[dependencies]
pico-args = "0.4.1"
rpassword = "5.0.1"
rust-crypto = "0.2.36"
rand = "0.8.5"
rand_pcg = "0.3.0"
rand_seeder = "0.2.3"
clipboard = "0.5.0"
anyhow = "1"
fehler = "1"